--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Slider Form</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <style>
       fieldset {
         border: 1px solid #ccc;
@@ -12,55 +13,101 @@
         display:block;
       }
       fieldset > div.slider-pair:first-of-type {
-          margin-bottom: 20px;
+        margin-bottom: 20px;
       }
       fieldset > .slider-pair > label > input + span {
-          margin-left: 10px;
+        margin-left: 10px;
+      }
+      .row {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+      }
+
+      .row label {
+        margin-right: 10px;
+      }
+
+      .toggle-button {
+        background-color: #eee;
+        border: 1px solid #ccc;
+        padding: 5px 10px;
+        cursor: pointer;
+        font-size: 16px;
+      }
+
+      .momentary-button {
+        background-color: #eee;
+        border: 1px solid #ccc;
+        padding: 5px 10px;
+        cursor: pointer;
+        font-size: 16px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+        display: flex;
+        align-items: center;
+      }
+
+      .momentary-button:active {
+        box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2);
+      }
+
+      .momentary-button svg {
+        width: 20px;
+        height: 20px;
+        transition: transform 0.2s ease-in-out;
+      }
+
+      .momentary-button:active svg {
+        transform: rotate(90deg);
       }
     </style>
   </head>
   <body>
     <h1>Slider and Checkbox Form</h1>
     <form id="myForm">
-     <!--
-      <fieldset class="ir-group">
-        <legend><input type="checkbox" id="sync1" checked/>Linked</legend>
-
-        <label for="slider1">Slider 1:
-          <input type="range" id="slider1" name="slider1" min="0" max="4096" value="0"/>
-          <span id="slider1Value">0</span>
-        </label>
-
-        <label for="slider2">Slider 2:
-          <input type="range" id="slider2" name="slider2" min="0" max="4096" value="0"/>
-          <span id="slider2Value">0</span>
-        </label>
-      </fieldset>
-
-      <fieldset>
-        <label><input type="checkbox" id="sync3" checked>Linked</label><br>
-        <label for="slider3">Slider 3:</label>
-        <input type="range" id="slider3" name="slider3" min="0" max="4096" value="0"><span id="slider3Value">0</span><br><br>
-        <label for="slider4">Slider 4:</label>
-        <input type="range" id="slider4" name="slider4" min="0" max="4096" value="0"><span id="slider4Value">0</span><br><br>
-      </fieldset>
-
-      <fieldset>
-        <label><input type="checkbox" id="sync5" checked>Linked</label><br>
-        <label for="slider5">Slider 5:</label>
-        <input type="range" id="slider5" name="slider5" min="0" max="4096" value="0"><span id="slider5Value">0</span><br><br>
-        <label for="slider6">Slider 6:</label>
-        <input type="range" id="slider6" name="slider6" min="0" max="4096" value="0"><span id="slider6Value">0</span><br><br>
-      </fieldset>
-
-      <label><input type="checkbox" name="motorOvercurrent" value="true"> Motor Overcurrent</label><br>
-      <label><input type="checkbox" name="doorSwitch" value="true"> Door Switch</label><br>
-      <label><input type="checkbox" name="limitSwitch1" value="true"> Limit Switch 1</label><br>
-      <label><input type="checkbox" name="limitSwitch2" value="true"> Limit Switch 2</label><br><br>
-
-      <label><input type="checkbox" id="sendToServer" checked> Send to Server</label>
-     -->
+      <label><input type="checkbox" name="motorOvercurrent" value="1">Motor Overcurrent</label>
+      <br>
+      <label><input type="checkbox" name="doorSwitch" value="1">Door Switch</label>
+      <br>
+      <label><input type="checkbox" name="limitSwitch1" value="1">Limit Switch 1</label>
+      <br>
+      <label><input type="checkbox" name="limitSwitch2" value="1">Limit Switch 2</label>
+      <br><br>
+      <label><input type="checkbox" id="sendToServer" checked>Send to Server</label>
     </form>
+    <section>
+        <div class="row">
+            <label for="overcurrentCheckbox">
+              <input type="checkbox" id="overcurrentCheckbox" name="overcurrent"> Overcurrent
+            </label>
+            <button class="momentary-button" id="overcurrentButton" name="overcurrent">Toggle</button>
+          </div>
+
+          <div class="row">
+            <label for="doorCheckbox">
+              <input type="checkbox" id="doorCheckbox" name="door"> Door
+            </label>
+            <button class="momentary-button" id="doorButton" name="door">Toggle</button>
+          </div>
+
+          <div class="row">
+            <label for="limit1Checkbox">
+              <input type="checkbox" id="limit1Checkbox" name="limit1"> Limit 1
+            </label>
+            <button class="momentary-button" id="limit1Button" name="limit1">Toggle</button>
+          </div>
+
+          <div class="row">
+            <label for="limit2Checkbox">
+              <input type="checkbox" id="limit2Checkbox" name="limit2"> Limit 2
+            </label>
+            <button class="momentary-button" id="limit2Button" name="limit2">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M12 4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10v4l-2.83 2.83 1.42 1.41L12 14.83l3.41 3.41-1.42 1.41L12 16v-4l2.83-2.83-1.42-1.41L12 9.17 8.59 5.76 10.01 4.34z"/>
+                  </svg>
+            </button>
+          </div>
+    </section>
 
     <template id="slider-template">
       <div class="slider">
