--- a/index.html
+++ b/index.html
@@ -39,75 +39,74 @@
       .momentary-button {
         background-color: #eee;
         border: 1px solid #ccc;
-        padding: 5px 10px;
+        border-radius: 10px;
+        padding: 10px 10px 10px 10px;
         cursor: pointer;
         font-size: 16px;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
         display: flex;
         align-items: center;
+        position: relative; /* Needed for pseudo-element positioning */
       }
 
       .momentary-button:active {
         box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2);
       }
 
-      .momentary-button svg {
+      .momentary-button::before {
+        content: "";
+        position: absolute;
+        left: 0px; /* Adjust icon position */
+        top: 50%;
+        transform: translateY(-50%);
         width: 20px;
         height: 20px;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M12 4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10v4l-2.83 2.83 1.42 1.41L12 14.83l3.41 3.41-1.42 1.41L12 16v-4l2.83-2.83-1.42-1.41L12 9.17 8.59 5.76 10.01 4.34z'/%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-size: contain;
         transition: transform 0.2s ease-in-out;
       }
 
-      .momentary-button:active svg {
-        transform: rotate(90deg);
+      .momentary-button:active::before {
+        transform: translateY(-50%) rotate(90deg);
       }
     </style>
   </head>
   <body>
-    <h1>Slider and Checkbox Form</h1>
+    <h1>Kiosk Sim</h1>
     <form id="myForm">
-      <label><input type="checkbox" name="motorOvercurrent" value="1">Motor Overcurrent</label>
-      <br>
-      <label><input type="checkbox" name="doorSwitch" value="1">Door Switch</label>
-      <br>
-      <label><input type="checkbox" name="limitSwitch1" value="1">Limit Switch 1</label>
-      <br>
-      <label><input type="checkbox" name="limitSwitch2" value="1">Limit Switch 2</label>
-      <br><br>
       <label><input type="checkbox" id="sendToServer" checked>Send to Server</label>
-    </form>
-    <section>
+
+      <fieldset class="momentary">
         <div class="row">
-            <label for="overcurrentCheckbox">
-              <input type="checkbox" id="overcurrentCheckbox" name="overcurrent"> Overcurrent
-            </label>
-            <button class="momentary-button" id="overcurrentButton" name="overcurrent">Toggle</button>
-          </div>
+          <button type="button" class="momentary-button" id="overcurrentButton" name="overcurrent"></button>
+          <label for="overcurrentCheckbox">
+            <input type="checkbox" id="overcurrentCheckbox" name="overcurrent" value="1" />Motor Overcurrent
+          </label>
+        </div>
 
-          <div class="row">
-            <label for="doorCheckbox">
-              <input type="checkbox" id="doorCheckbox" name="door"> Door
-            </label>
-            <button class="momentary-button" id="doorButton" name="door">Toggle</button>
-          </div>
+        <div class="row">
+          <button type="button" class="momentary-button" id="doorButton" name="doorSwitch"></button>
+          <label for="doorCheckbox">
+            <input type="checkbox" id="doorCheckbox" name="doorSwitch" value="1" />Door
+          </label>
+        </div>
 
-          <div class="row">
-            <label for="limit1Checkbox">
-              <input type="checkbox" id="limit1Checkbox" name="limit1"> Limit 1
-            </label>
-            <button class="momentary-button" id="limit1Button" name="limit1">Toggle</button>
-          </div>
+        <div class="row">
+          <button type="button" class="momentary-button" id="limit1Button" name="limitSwitch1"></button>
+          <label for="limit1Checkbox">
+            <input type="checkbox" id="limit1Checkbox" name="limitSwitch1" value="1" />Limit 1
+          </label>
+        </div>
 
-          <div class="row">
-            <label for="limit2Checkbox">
-              <input type="checkbox" id="limit2Checkbox" name="limit2"> Limit 2
-            </label>
-            <button class="momentary-button" id="limit2Button" name="limit2">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12 4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10v4l-2.83 2.83 1.42 1.41L12 14.83l3.41 3.41-1.42 1.41L12 16v-4l2.83-2.83-1.42-1.41L12 9.17 8.59 5.76 10.01 4.34z"/>
-                  </svg>
-            </button>
-          </div>
-    </section>
+        <div class="row">
+          <button type="button" class="momentary-button" id="limit2Button" name="limitSwitch2"></button>
+          <label for="limit2Checkbox">
+            <input type="checkbox" id="limit2Checkbox" name="limitSwitch2" value="1" />Limit 2
+          </label>
+        </div>
+      </fieldset>
+    </form>
 
     <template id="slider-template">
       <div class="slider">
