--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       .quadrant:nth-child(4) {  }
 
       .quadrant:nth-child(1) section {
-        width: 50%;
+        width: 65%;
       }
 
       fieldset {
@@ -105,6 +105,10 @@
         transform: translateY(-50%) rotate(90deg);
       }
 
+      .controls-container {
+        font-size: x-large;
+      }
+
       .upload-area {
         width: 100%;
         margin: 0;
@@ -152,7 +156,7 @@
     <div class="container">
       <div class="row">
         <div class="quadrant">
-          <section>
+          <section class="controls-container">
             <form id="myForm">
               <label><input type="checkbox" id="sendToServer" checked>Send to Server</label>
 
